--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ wheel_build_env = pkg
 deps = -r requirements-dev.txt
 commands =
     unit: {envpython} -m pytest {posargs:tests/unit}
-    unitcov: {envpython} -W error::UserWarning -m pytest --cov=lls-openai-client --cov-report term --cov-report=html:coverage-{env_name} --cov-report=xml:coverage-{env_name}.xml --html=durations/{env_name}.html {posargs:tests/unit}
+    unitcov: {envpython} -W error::UserWarning -m pytest --cov=lls_openai_client --cov-report term --cov-report=html:coverage-{env_name} --cov-report=xml:coverage-{env_name}.xml --html=durations/{env_name}.html {posargs:tests/unit}
     functional: {envpython} -m pytest {posargs:tests/functional}
 
 # format, check, and linting targets don't build and install the project to
@@ -26,7 +26,7 @@ skip_install = true
 skipsdist = true
 deps = -r requirements-dev.txt
 commands =
-    {envpython} -m pylint --load-plugins pylint_pydantic src/lls-openai-client
+    {envpython} -m pylint --load-plugins pylint_pydantic src/lls_openai_client
 
 [testenv:fastlint]
 description = fast lint with pylint (without 3rd party modules)
@@ -36,7 +36,7 @@ deps =
     pylint
     pylint-pydantic
 commands =
-    {envpython} -m pylint --load-plugins pylint_pydantic {posargs:--disable=import-error src/lls-openai-client/}
+    {envpython} -m pylint --load-plugins pylint_pydantic {posargs:--disable=import-error src/lls_openai_client/}
 
 [testenv:ruff]
 description = reformat and fix code with Ruff (and isort)
