--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dynamic = ["dependencies", "optional-dependencies", "version"]
 [project.urls]
 
 [tool.setuptools_scm]
-version_file = "src/lls-openai-client/_version.py"
+version_file = "src/lls_openai_client/_version.py"
 # do not include +gREV local version, required for Test PyPI upload
 local_scheme = "no-local-version"
 
@@ -44,7 +44,7 @@ dependencies = {file = ["requirements.txt"]}
 
 [tool.setuptools.packages.find]
 where = ["src"]
-include = ["lls-openai-client"]
+include = ["lls_openai_client"]
 
 [tool.ruff]
 target-version = "py310"
