--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,7 +8,7 @@ datasets
 opentelemetry-exporter-otlp-proto-http
 opentelemetry-sdk
 
-llama_stack>=0.1.7
+llama-stack>=0.1.7
 
 pylint>=2.16.2,<4.0
 pylint-pydantic
