--- a/.pylintrc
+++ b/.pylintrc
@@ -379,8 +379,7 @@ int-import-graph=
 known-standard-library=
 
 # Force import order to recognize a module as part of a third party library.
-known-third-party=enchant,
-    instructlab.schema,
+known-third-party=
 
 # Couples of modules and preferred modules, separated by a comma.
 preferred-modules=
