--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ skip_install = true
 skipsdist = true
 deps = -r requirements-dev.txt
 commands =
-    {envpython} -m pylint --load-plugins pylint_pydantic src/lls_openai_client
+    {envpython} -m pylint --load-plugins pylint_pydantic src/lls_openai_client tests/
 
 [testenv:fastlint]
 description = fast lint with pylint (without 3rd party modules)
@@ -36,7 +36,7 @@ deps =
     pylint
     pylint-pydantic
 commands =
-    {envpython} -m pylint --load-plugins pylint_pydantic {posargs:--disable=import-error src/lls_openai_client/}
+    {envpython} -m pylint --load-plugins pylint_pydantic {posargs:--disable=import-error src/lls_openai_client/ tests/functional/}
 
 [testenv:ruff]
 description = reformat and fix code with Ruff (and isort)
