Remove trailing comma from AWS tags json
Signed-off-by: Ben Browning <bbrownin@redhat.com>

--- a/.github/workflows/openai-api-verification.yaml
+++ b/.github/workflows/openai-api-verification.yaml
@@ -45,7 +45,7 @@ jobs:
             [
               {"Key": "Name", "Value": "instructlab-ci-github-runner"},
               {"Key": "GitHubRepository", "Value": "${{ github.repository }}"},
-              {"Key": "GitHubRef", "Value": "${{ github.ref }}"},
+              {"Key": "GitHubRef", "Value": "${{ github.ref }}"}
             ]
 
   verification:
