--- a/.github/workflows/openai-api-verification.yaml
+++ b/.github/workflows/openai-api-verification.yaml
@@ -74,7 +74,7 @@ jobs:
           nvidia-smi
 
           export UV_PYTHON_PREFERENCE=only-system
-          python -m pip install uv
+          python3.11 -m pip install uv
           uv sync --extra dev
           uv pip install -e .
           uv pip install pytest-json-report
@@ -98,7 +98,7 @@ jobs:
       - name: Run verification tests
         run: |
           source .venv/bin/activate
-          python -m pytest -s -v tests/verifications/openai_api/test_chat_completion.py
+          python3.11 -m pytest -s -v tests/verifications/openai_api/test_chat_completion.py
 
   stop-ec2-runner:
     needs:
