--- a/.github/workflows/openai-api-verification.yaml
+++ b/.github/workflows/openai-api-verification.yaml
@@ -78,22 +78,19 @@ jobs:
           uv sync --extra dev
           uv pip install -e .
           uv pip install pytest-json-report
-          uv pip install "vllm>=0.8.0"
+          uv pip install vllm
           uv run llama stack build --template remote-vllm --image-type venv
 
       - name: Run servers
         run: |
-          uv run vllm serve "${INFERENCE_MODEL}" --port 8000 --enable-auto-tool-choice --tool-call-parser llama3_json --max-model-len 32000
+          uv run vllm serve "${INFERENCE_MODEL}" --port 8000 --enable-auto-tool-choice --tool-call-parser llama3_json --max-model-len 32000 &
+          curl --retry-connrefused --retry 50 --retry-delay 30 "${VLLM_URL}/models"
           uv run llama stack run --image-type venv --port 8321 remote-vllm &
+          curl --retry-connrefused --retry 5 --retry-delay 3 http://localhost:8321/v1/openai/v1/models
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           VLLM_URL: "http://localhost:8000/v1"
           INFERENCE_MODEL: "meta-llama/Llama-3.2-3B-Instruct"
-
-      - name: Wait for servers to come up
-        run: |
-          curl --retry-connrefused --retry 50 --retry-delay 30 http://localhost:8000/v1/models
-          curl --retry-connrefused --retry 5 --retry-delay 3 http://localhost:8321/v1/openai/v1/models
 
       - name: Run verification tests
         run: |
