--- a/.github/workflows/openai-api-verification.yaml
+++ b/.github/workflows/openai-api-verification.yaml
@@ -77,6 +77,7 @@ jobs:
           python3.11 -m pip install uv
           uv sync --extra dev
           source .venv/bin/activate
+          python3.11 -m ensurepip
           uv pip install -e .
           uv pip install pytest-json-report
 
