--- a/.github/workflows/openai-api-verification.yaml
+++ b/.github/workflows/openai-api-verification.yaml
@@ -8,7 +8,8 @@ on:
 env:
   LC_ALL: en_US.UTF-8
   TMPDIR: /home/tmp
-  INFERENCE_MODEL: RedHatAI/Llama-3.3-70B-Instruct-quantized.w4a16
+  VERIFICATION_RESULTS_DIR: /home/tmp/test_results
+  VLLM_INFERENCE_MODEL: RedHatAI/Llama-3.3-70B-Instruct-quantized.w4a16
 
 defaults:
   run:
@@ -59,6 +60,7 @@ jobs:
         run: |
           cat /etc/os-release
           mkdir -p "${TMPDIR}"
+          mkdir -p "${VERIFICATION_RESULTS_DIR}"
           sudo dnf install -y gcc gcc-c++ make git python3.11 python3.11-devel python3.11-pip
 
       - name: Checkout meta-llama/llama-stack
@@ -91,7 +93,7 @@ jobs:
       - name: Run servers
         run: |
           source .venv/bin/activate
-          python3.11 -m vllm.entrypoints.openai.api_server --model "${INFERENCE_MODEL}" --port 8000 --enable-auto-tool-choice --tool-call-parser llama3_json --gpu-memory-utilization 0.99 --enforce-eager --max-model-len 16000 &
+          python3.11 -m vllm.entrypoints.openai.api_server --model "${VLLM_INFERENCE_MODEL}" --port 8000 --enable-auto-tool-choice --tool-call-parser llama3_json --gpu-memory-utilization 0.99 --enforce-eager --max-model-len 16000 &
           curl --retry-connrefused --retry 50 --retry-delay 30 "${VLLM_URL}/models"
           uv run llama stack run --image-type venv --port 8321 remote-vllm &
           curl --retry-connrefused --retry 5 --retry-delay 3 http://localhost:8321/v1/openai/v1/models
@@ -99,23 +101,33 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           VLLM_URL: "http://localhost:8000/v1"
 
-      - name: Run verification tests
+      - name: Run vllm verification tests
         run: |
           source .venv/bin/activate
+
           cat <<-EOF > tests/verifications/conf/vllm-llama-stack.yaml
           base_url: http://localhost:8321/v1/openai/v1
           api_key_var: OPENAI_API_KEY
           models:
-          - ${INFERENCE_MODEL}
+          - ${VLLM_INFERENCE_MODEL}
           model_display_names:
-            ${INFERENCE_MODEL}: ${INFERENCE_MODEL}
+            ${VLLM_INFERENCE_MODEL}: ${VLLM_INFERENCE_MODEL}
           test_exclusions:
-            ${INFERENCE_MODEL}:
+            ${VLLM_INFERENCE_MODEL}:
             - test_chat_non_streaming_image
             - test_chat_streaming_image
             - test_chat_multi_turn_multiple_images
           EOF
-          python3.11 -m pytest -s -v tests/verifications/openai_api/test_chat_completion.py --provider=vllm-llama-stack
+
+          python3.11 -m pytest -s -v tests/verifications/openai_api/test_chat_completion.py --provider=vllm-llama-stack --json-report --json-report-file="${VERIFICATION_RESULTS_DIR}/vllm-llama-stack.json"
+        env:
+          OPENAI_API_KEY: fake
+
+      - name: Upload test artifacts
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        with:
+          name: openai-api-verification-results
+          path: ${{ env.VERIFICATION_RESULTS_DIR }}
 
   stop-ec2-runner:
     needs:
