--- a/.github/workflows/openai-api-verification.yaml
+++ b/.github/workflows/openai-api-verification.yaml
@@ -125,6 +125,7 @@ jobs:
 
       - name: Upload test artifacts
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        if: ${{ always() }}
         with:
           name: openai-api-verification-results
           path: ${{ env.VERIFICATION_RESULTS_DIR }}
