--- a/.github/workflows/openai-api-verification.yaml
+++ b/.github/workflows/openai-api-verification.yaml
@@ -119,9 +119,9 @@ jobs:
             - test_chat_multi_turn_multiple_images
           EOF
 
+          export INFERENCE_MODEL="${VLLM_INFERENCE_MODEL}"
           python3.11 -m pytest -s -v tests/verifications/openai_api/test_chat_completion.py --provider=vllm-llama-stack --json-report --json-report-file="${VERIFICATION_RESULTS_DIR}/vllm-llama-stack.json"
         env:
-          INFERENCE_MODEL: ${{ env.VLLM_INFERENCE_MODEL }}
           OPENAI_API_KEY: fake
 
       - name: Upload test artifacts
