--- a/.github/workflows/openai-api-verification.yaml
+++ b/.github/workflows/openai-api-verification.yaml
@@ -120,22 +120,63 @@ jobs:
             - test_chat_multi_turn_multiple_images
           EOF
 
-          python3.11 -m pytest -s -v tests/verifications/openai_api/test_chat_completion.py --provider=vllm-llama-stack --json-report --json-report-file="${VERIFICATION_RESULTS_DIR}/vllm-llama-stack.json"
+          python3.11 -m pytest -s -v tests/verifications/openai_api/test_chat_completion.py --provider=vllm-llama-stack --json-report --json-report-file="${VERIFICATION_RESULTS_DIR}/vllm-llama-stack.json" || echo "some verification tests failed"
         env:
           INFERENCE_MODEL: ${{ env.VLLM_INFERENCE_MODEL }}
           OPENAI_API_KEY: fake
 
       - name: Upload test artifacts
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
-        if: ${{ always() }}
         with:
           name: openai-api-verification-results
           path: ${{ env.VERIFICATION_RESULTS_DIR }}
+
+  publish-results:
+    name: publish-results
+    runs-on: ubuntu-latest
+    needs: verification
+    permissions:
+      # allow pushing to the github repo
+      contents: write
+    steps:
+      - name: Checkout this repo
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: "main"
+          # https://github.com/actions/checkout/issues/249
+          fetch-depth: 0
+
+      - name: Download report artifact
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+        with:
+          name: openai-api-verification-results
+          path: artifacts
+
+      - name: Add the new verification results
+        run: |
+          export TODAY="$(date -Idate)"
+          ls -l artifacts/
+          mkdir -p openai-api-verification/latest
+          mkdir -p openai-api-verification/${TODAY}
+          cp artifacts/*.json openai-api-verification/latest/
+          cp artifacts/*.json openai-api-verification/${TODAY}/
+
+      - name: Push new reports
+        run: |
+          git config --global user.name "Ben Browning"
+          git config --global user.email "bbrownin@redhat.com"
+
+          git add openai-api-verification
+          git commit -m "Verification results for $(date -Idate)"
+          git push
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   stop-ec2-runner:
     needs:
       - start-ec2-runner
       - verification
+      - publish-results
     runs-on: ubuntu-latest
     if: ${{ always() }}
     steps:
@@ -157,7 +198,7 @@ jobs:
   workflow-complete:
     # we don't want to block PRs on failed EC2 cleanup
     # so not requiring "stop-ec2-runner" as well
-    needs: ["start-ec2-runner", "verification"]
+    needs: ["start-ec2-runner", "verification", "publish-results"]
     runs-on: ubuntu-latest
     steps:
       - name: Workflow Complete
