action lint shellcheck
Signed-off-by: Ben Browning <bbrownin@redhat.com>

--- a/.github/workflows/openai-api-verification.yaml
+++ b/.github/workflows/openai-api-verification.yaml
@@ -173,9 +173,9 @@ jobs:
           export TODAY="$(date -Idate)"
           ls -l artifacts/
           mkdir -p openai-api-verification/latest
-          mkdir -p openai-api-verification/${TODAY}
+          mkdir -p "openai-api-verification/${TODAY}"
           cp artifacts/*.json openai-api-verification/latest/
-          cp artifacts/*.json openai-api-verification/${TODAY}/
+          cp artifacts/*.json "openai-api-verification/${TODAY}/"
 
       - name: Push new reports
         run: |
