shellcheck declare vs export separately
Signed-off-by: Ben Browning <bbrownin@redhat.com>

--- a/.github/workflows/openai-api-verification.yaml
+++ b/.github/workflows/openai-api-verification.yaml
@@ -170,7 +170,8 @@ jobs:
 
       - name: Add the new verification results
         run: |
-          export TODAY="$(date -Idate)"
+          TODAY="$(date -Idate)"
+          export TODAY
           ls -l artifacts/
           mkdir -p openai-api-verification/latest
           mkdir -p "openai-api-verification/${TODAY}"
