vllm specific api verification
Signed-off-by: Ben Browning <bbrownin@redhat.com>

--- a/.github/workflows/openai-api-verification.yaml
+++ b/.github/workflows/openai-api-verification.yaml
@@ -1,6 +1,6 @@
 # spdx-license-identifier: Apache-2.0
 
-name: OpenAI API Verification
+name: vLLM OpenAI API Verification
 
 on:
   workflow_dispatch:
