--- a/.github/workflows/ollama-openai-api-verification.yaml
+++ b/.github/workflows/ollama-openai-api-verification.yaml
@@ -93,6 +93,7 @@ jobs:
       - name: Run servers
         run: |
           source .venv/bin/activate
+          ollama serve &
           ollama run "${INFERENCE_MODEL}" &
           curl --retry-connrefused --retry 50 --retry-delay 30 "http://localhost:11434/v1/models"
           uv run llama stack run --image-type venv --port 8321 ollama &
