Use vLLM v0 with outlines backend for tool_choice required
Signed-off-by: Ben Browning <bbrownin@redhat.com>

--- a/.github/workflows/vllm-openai-api-verification.yaml
+++ b/.github/workflows/vllm-openai-api-verification.yaml
@@ -95,7 +95,7 @@ jobs:
       - name: Run servers
         run: |
           source .venv/bin/activate
-          python3.11 -m vllm.entrypoints.openai.api_server --model "${VLLM_INFERENCE_MODEL}" --port 8000 --enable-auto-tool-choice --tool-call-parser llama3_json --gpu-memory-utilization 0.99 --enforce-eager --max-model-len 16000 &
+          python3.11 -m vllm.entrypoints.openai.api_server --model "${VLLM_INFERENCE_MODEL}" --port 8000 --enable-auto-tool-choice --tool-call-parser llama3_json --gpu-memory-utilization 0.99 --enforce-eager --max-model-len 16000 --guided-decoding-backend outlines &
           curl --retry-connrefused --retry 50 --retry-delay 30 "${VLLM_URL}/models"
           uv run llama stack run --image-type venv --port 8321 remote-vllm &
           curl --retry-connrefused --retry 5 --retry-delay 3 http://localhost:8321/v1/openai/v1/models
@@ -103,6 +103,9 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           INFERENCE_MODEL: ${{ env.VLLM_INFERENCE_MODEL }}
           VLLM_URL: "http://localhost:8000/v1"
+          # Only vllm v0 supports tool_choice "required" with outlines backend
+          # https://docs.vllm.ai/en/stable/features/tool_calling.html#required-function-calling
+          VLLM_USE_V1: 0
 
       - name: Run vllm verification tests
         run: |
