--- a/.github/workflows/vllm-openai-api-verification.yaml
+++ b/.github/workflows/vllm-openai-api-verification.yaml
@@ -133,11 +133,28 @@ jobs:
           source .venv/bin/activate
 
           # Download latest Llama 4 chat template from vLLM
-          curl https://raw.githubusercontent.com/vllm-project/vllm/d5615af9aee97ef44f46de722d48852eb5d40802/examples/tool_chat_template_llama4_json.jinja -o tool_chat_template_llama4_json.jinja
+          # curl https://raw.githubusercontent.com/vllm-project/vllm/d5615af9aee97ef44f46de722d48852eb5d40802/examples/tool_chat_template_llama4_json.jinja -o tool_chat_template_llama4_json.jinja
+
+          # Actually, pull pythonic template from a fork
+          curl https://raw.githubusercontent.com/yeqcharlotte/vllm/90d7613c786dada033a07614ee315512543c8ca6/examples/tool_chat_template_llama4_pythonic.jinja  -o tool_chat_template_llama4_pythonic.jinja
+
+          # Also pull a custom tool call parser to test things
+          curl https://gist.githubusercontent.com/bbrowning/64f0cebfb452386374880dcd9b644bf2/raw/f845a15f131d51561d5f83b670f375e8d59ad399/pythonic-custom.py -o "${TMPDIR}/pythonic-custom.py"
 
           # Start vLLM and wait for it to come up
           # TODO: this needs llama4_json tool call parser once that gets into a vllm release
-          python3.11 -m vllm.entrypoints.openai.api_server --model "${VLLM_INFERENCE_MODEL}" --port 8000 --enable-auto-tool-choice --tool-call-parser llama3_json --chat-template tool_chat_template_llama4_json.jinja --gpu-memory-utilization 0.99 --enforce-eager --max-model-len 32000 --tensor-parallel-size 4 2>&1 | tee vllm.log &
+          python3.11 -m vllm.entrypoints.openai.api_server \
+            --model "${VLLM_INFERENCE_MODEL}" \
+            --port 8000 \
+            --enable-auto-tool-choice \
+            --tool-parser-plugin "${TMPDIR}/pythonic-custom.py" \
+            --tool-call-parser pythonic-custom \
+            --chat-template tool_chat_template_llama4_pythonic.jinja \
+            --gpu-memory-utilization 0.99 \
+            --enforce-eager \
+            --max-model-len 32000 \
+            --tensor-parallel-size 4 \
+            2>&1 | tee vllm.log &
           curl --retry-connrefused --retry 50 --retry-delay 30 "${VLLM_URL}/models"
 
           # Start Llama Stack and wait for it to come up
