--- a/.github/workflows/ramalama-openai-api-verification.yaml
+++ b/.github/workflows/ramalama-openai-api-verification.yaml
@@ -78,6 +78,7 @@ jobs:
         with:
           repository: "containers/ramalama-stack"
           ref: "main"
+          path: "ramalama-stack"
           # https://github.com/actions/checkout/issues/249
           fetch-depth: 0
 
@@ -102,7 +103,8 @@ jobs:
           ramalama serve "${INFERENCE_MODEL}" -d
           # shellcheck disable=SC2016
           timeout 600 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8080/v1/models/${INFERENCE_MODEL})" != "200" ]]; do sleep 5; done' || false
-          uv run llama stack run --image-type venv --port 8321 ramalama-stack/run.yaml &
+          cd ramalama-stack
+          uv run llama stack run --image-type venv --port 8321 run.yaml &
           curl --retry-connrefused --retry 15 --retry-delay 5 http://localhost:8321/v1/openai/v1/models
         env:
           HOME: ${{ env.TMPDIR }}
