--- a/.github/workflows/ramalama-openai-api-verification.yaml
+++ b/.github/workflows/ramalama-openai-api-verification.yaml
@@ -95,12 +95,12 @@ jobs:
           uv pip install -e .
           uv pip install pytest-json-report
           
-          uv pip install ramalama
+          uv pip install ramalama==0.7.5
 
       - name: Run servers
         run: |
           source .venv/bin/activate
-          ramalama serve "${INFERENCE_MODEL}" -d
+          ramalama serve "${INFERENCE_MODEL}" > ramalama.log 2>&1 &
           # shellcheck disable=SC2016
           timeout 600 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8080/v1/models/${INFERENCE_MODEL})" != "200" ]]; do sleep 5; done' || false
           cd ramalama-stack
