Alias our model's name for llama.cpp
By default, llama.cpp uses the full model path as its model id. But,
that's annoying because we're just passing in the model by name and
would like to be able to reference it by name in the llama.cpp API
server. So, tell ramalama to pass the `--alias` arg into llama.cpp so
our model's id in the OpenAI API is just its name.

Signed-off-by: Ben Browning <bbrownin@redhat.com>

--- a/.github/workflows/ramalama-openai-api-verification.yaml
+++ b/.github/workflows/ramalama-openai-api-verification.yaml
@@ -102,7 +102,7 @@ jobs:
           source .venv/bin/activate
 
           ramalama pull "${INFERENCE_MODEL}"
-          ramalama serve "${INFERENCE_MODEL}" 2>&1 | tee ramalama.log &
+          ramalama serve --runtime-args="--alias ${INFERENCE_MODEL}" "${INFERENCE_MODEL}" 2>&1 | tee ramalama.log &
           # shellcheck disable=SC2016
           timeout 600 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8080/v1/models/${INFERENCE_MODEL})" != "200" ]]; do sleep 5; done' || false
 
