Re-enable the schedule for ramalama now that it runs
Signed-off-by: Ben Browning <bbrownin@redhat.com>

--- a/.github/workflows/ramalama-openai-api-verification.yaml
+++ b/.github/workflows/ramalama-openai-api-verification.yaml
@@ -4,8 +4,8 @@ name: ramalama OpenAI API Verification
 
 on:
   workflow_dispatch:
-  # schedule:
-  #   - cron: "21 21 * * *"
+  schedule:
+    - cron: "21 21 * * *"
 
 env:
   LC_ALL: en_US.UTF-8
