--- a/.github/workflows/ramalama-openai-api-verification.yaml
+++ b/.github/workflows/ramalama-openai-api-verification.yaml
@@ -4,6 +4,15 @@ name: ramalama OpenAI API Verification
 
 on:
   workflow_dispatch:
+    inputs:
+      repo:
+        description: ramalama-stack repo to checkout
+        required: false
+        default: containers/ramalama-stack
+      branch:
+        description: ramalama-stack branch to checkout
+        required: false
+        default: main
   schedule:
     - cron: "21 21 * * *"
 
@@ -76,8 +85,8 @@ jobs:
       - name: Checkout containers/ramalama-stack
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          repository: "containers/ramalama-stack"
-          ref: "main"
+          repository:  ${{ inputs.repo || 'containers/ramalama-stack' }}
+          ref: ${{ inputs.branch || 'main' }}
           path: "ramalama-stack"
           # https://github.com/actions/checkout/issues/249
           fetch-depth: 0
@@ -95,7 +104,7 @@ jobs:
           uv pip install -e .
           uv pip install pytest-json-report
           
-          uv pip install ramalama==0.7.5
+          uv pip install ramalama
 
       - name: Run servers
         run: |
