`uv sync --extra dev` -> `uv sync --group dev`
Signed-off-by: Ben Browning <bbrownin@redhat.com>

--- a/.github/workflows/vllm-openai-api-verification.yaml
+++ b/.github/workflows/vllm-openai-api-verification.yaml
@@ -116,7 +116,7 @@ jobs:
 
           export UV_PYTHON_PREFERENCE=only-system
           python3.11 -m pip install uv
-          uv sync --extra dev
+          uv sync --group dev
           source .venv/bin/activate
           python3.11 -m ensurepip
           uv pip install -e .
