ollama needs a newer huggingface-hub
Signed-off-by: Ben Browning <bbrownin@redhat.com>

--- a/.github/workflows/ollama-openai-api-verification.yaml
+++ b/.github/workflows/ollama-openai-api-verification.yaml
@@ -90,6 +90,9 @@ jobs:
 
           uv run llama stack build --template ollama --image-type venv
 
+          # newer huggingface-hub so we work with latest transformers
+          python3.11 -m pip install "huggingface-hub>=0.30.0"
+
       - name: Run servers
         run: |
           source .venv/bin/activate
