--- a/.github/workflows/ollama-openai-api-verification.yaml
+++ b/.github/workflows/ollama-openai-api-verification.yaml
@@ -91,7 +91,7 @@ jobs:
           uv run llama stack build --template ollama --image-type venv
 
           # newer huggingface-hub so we work with latest transformers
-          python3.11 -m pip install "huggingface-hub>=0.30.0"
+          uv pip install "huggingface-hub>=0.30.0"
 
       - name: Run servers
         run: |
