Try to get a working huggingface_hub version
Signed-off-by: Ben Browning <bbrownin@redhat.com>

--- a/.github/workflows/vllm-integration-tests.yaml
+++ b/.github/workflows/vllm-integration-tests.yaml
@@ -112,8 +112,9 @@ jobs:
           uv pip install -e .
 
           # newer huggingface-hub and vllm directly via pip (vs uv)
-          uv pip install "huggingface-hub>=0.30.0"
-          uv pip install "vllm>=0.8.4"
+          uv add "huggingface-hub>=0.30.0"
+          uv add "vllm>=0.8.4"
+          uv sync --all-groups
 
           uv run llama stack build --template remote-vllm --image-type venv
 
